# yutori-mcp

./: .gitignore  .mcp.json  README.md  TOOLS.md  pyproject.toml
.agents/skills/: README.md
.agents/skills/yutori-api-monitor/: SKILL.md
.agents/skills/yutori-api-monitor/agents/: openai.yaml
.agents/skills/yutori-browse/: SKILL.md
.agents/skills/yutori-browse/agents/: openai.yaml
.agents/skills/yutori-competitor-watch/: SKILL.md
.agents/skills/yutori-competitor-watch/agents/: openai.yaml
.agents/skills/yutori-research/: SKILL.md
.agents/skills/yutori-research/agents/: openai.yaml
.agents/skills/yutori-scout/: SKILL.md
.agents/skills/yutori-scout/agents/: openai.yaml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: api-monitor  browse  competitor-watch  research  scout
.cursor-plugin/: marketplace.json  plugin.json
.github/workflows/: publish_to_pypi.yml
scripts/: package-claude-desktop.sh
skills/00-login/: SKILL.md
skills/01-scout/: SKILL.md
skills/02-research/: SKILL.md
skills/03-browse/: SKILL.md
skills/04-competitor-watch/: SKILL.md
skills/05-api-monitor/: SKILL.md
skills/api-monitor/: SKILL.md
skills/competitor-watch/: SKILL.md
skills/login/: SKILL.md
skills/research/: SKILL.md
skills/yutori-login/: SKILL.md
src/yutori_mcp/: __init__.py  adapter.py  auth.py  cli.py  client.py  constants.py  formatters.py  schemas.py  server.py
tests/: __init__.py  conftest.py  test_adapter.py  test_formatters.py  test_schemas.py  test_server.py
