[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yutori-mcp"
version = "0.1.1"
description = "MCP server for Yutori - web monitoring and browsing automation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Yutori", email = "support@yutori.com" }
]
keywords = ["mcp", "yutori", "web-automation", "browsing", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.26.0,<0.29.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://yutori.com"
Documentation = "https://docs.yutori.com"
Repository = "https://github.com/yutori-ai/yutori-mcp"

[project.scripts]
yutori-mcp = "yutori_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yutori_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
